# wallet

./: Makefile  main.py  pyproject.toml
wallet/: version.py
wallet/app/: agenting.py  apping.py  drawing.py  layout.py  naving.py  settings.py  splashing.py
wallet/app/contacting/: contact.py  contacts.py  create_contact.py  view_contact.py
wallet/app/identifying/: create_identifier.py  identifiers.py  kel_update_confirm.py  rotate_group_identifier.py  rotate_identifier.py  view_identifer.py
wallet/app/oobing/: oobi_resolver.py
wallet/app/witnessing/: add_witness.py  view_witness.py  witnesses.py
wallet/core/: agenting.py  coring.py  grouping.py  habs.py  koming.py  syncing.py
wallet/notifying/: group_inception_request.py  group_rotation_request.py  notifications.py
wallet/tasks/: aiding.py
